k8s/msg-transfer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: message-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: message-api
  name: message-transfer
  labels:
    app: message-transfer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-transfer
  template:
    metadata:
      labels:
        app: message-transfer
    spec:
      containers:
      - name: msg-transfer
        image: msg-transfer ### YOUR_IMAGE_NAME
---
apiVersion: v1
kind: Service
metadata:
  namespace: message-api
  name: message-api
  labels:
    app: message-transfer
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: message-transfer
